--- a/package.json
+++ b/package.json
@@ -6,35 +6,56 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:unit": "jest --testPathIgnorePatterns=integration"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "@supabase/supabase-js": "^2.57.4",
     "expo": "~53.0.22",
+    "expo-av": "~15.1.7",
+    "expo-camera": "^16.1.11",
+    "expo-document-picker": "^13.1.6",
+    "expo-file-system": "^18.1.11",
     "expo-haptics": "^14.1.4",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-local-authentication": "~16.0.5",
+    "expo-notifications": "~0.31.4",
+    "expo-print": "~14.1.4",
     "expo-secure-store": "~14.2.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^3.0.0-next.34",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-html-to-pdf": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "tailwindcss": "^3.4.17",
-    "expo-local-authentication": "~16.0.5",
-    "expo-notifications": "~0.31.4",
-    "@expo/vector-icons": "^14.1.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "~29.5.0",
     "@types/react": "~19.0.10",
+    "jest": "~29.7.0",
+    "jest-environment-jsdom": "~29.7.0",
+    "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
   "private": true
